# VRC-OSC-Keyboard

./: .gitignore  App.test.tsx  App.tsx  README.md  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  release.json  server.js  types.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
components/: CursorOverlay.tsx  Key.tsx  SettingsModal.test.tsx  SettingsModal.tsx  TutorialOverlay.tsx  VirtualKeyboard.tsx
components/settings/: AccentColorSection.tsx  OverlaySection.tsx  UpdateCheckSection.tsx  index.ts
constants/: appConfig.ts  index.ts  keyboardLayout.ts  romajiMap.ts  translations.ts
docs/en/: README.en.md
electron/: input_handler.js  input_handler.test.ts  main.js  overlay.js  overlay.test.ts  preload.js
electron/input/: constants.js  controllers.js  drag.js  (+7 more)
hooks/: useIME.test.ts  useIME.ts  useKeyboardController.test.ts  useModalAnimation.ts  useOscSender.test.ts  useOscSender.ts  useTheme.ts  useTypingIndicator.ts
native/: Cargo.toml  index.js  index.node  vr-overlay-native.win32-x64-msvc.node
native/src/: lib.rs
native/src/overlay/: constants.rs  controller_ops.rs  d3d11.rs  errors.rs  input_ops.rs  manager.rs  mod.rs  overlay_ops.rs  texture_ops.rs  types.rs
scripts/: removeLocales.cjs  rename-build-output.js  sync-native.cjs
services/: oscService.test.ts  oscService.ts
steamvr/: actions.json
stores/: configStore.test.ts  configStore.ts
types/: electron.d.ts  global.d.ts
utils/: colorUtils.test.ts  colorUtils.ts  ime.test.ts  ime.ts  throttle.test.ts  throttle.ts
(+17 files in other folders)
